--- a/README
+++ b/README
@@ -20,8 +20,9 @@ Release Notes
 
 ### 1.16
 
-* Added: Test results tables now have a collapsable tree structure
-* Added: New default way to display results as (Suite/Test/Class/Method(with description) can be switched back to old view (package/class/method) in settings
+* Added: New default way to display results as Suite/Test/Method(with description) can be switched back to old view (package/class/method) with the click of a button
+* Added: New view tables tables now have a collapsable tree structure
+* Added: Setting to set default view (new view by default)
 * Added: Added SuiteResult and modified the other results to reflect the new result structure
 * Added: Modified the parser to populate the new result structure
 
